--- a/P4/P4.csproj
+++ b/P4/P4.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Interpreter\Tests\ASTNodeTest\VariableDeclarationNode_Should.cs" />
+    <Compile Remove="Interpreter\AST\Nodes\GameObjectDeclaration.cs" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
